Sun Nov 24 22:47:43 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * Patch from Daniel Ashbrook <anjiro@cc.gatech.edu> to bind a key (v) to
    switching between window and fullscreen mode

Sun Oct 20 22:45:01 2002 EDT, Paul Duncan <pabs@pablotron.org>

  * added requested screen-clip option (allows you to disable window size
    clipping based on screen geometry; ie, you can make pathologically large
    windows, assuming you have the images to do so)
  * disabled xinerama geometry check when using feh to set the background.
  * cleaned up spelling and capitalization in menus

Sun Oct 20 20:12:23 2002 EDT, Paul Duncan <pabs@pablotron.org>

  * src/support.c: xinerama bugfix from Jon Bernard <jbernard@roanoke.edu>
  * src/options.c: added 'Use Xinerama' toggle to option menu
  * src/options.c: changed 'Keep http files' to 'Keep HTTP Files'
    (pet peeve ;P)
  * src/options.c: added 'Auto-Zoom' toggle to option menu
  * feh.1: added info about --xinerama flag
  * AUTHORS: added Jon Bernard

Sun Oct 20 14:49:46 2002 EDT, Paul Duncan <pabs@pablotron.org>
  
  * New beveled, off-white background image for menus.  I made it the
    default after consulting with the boss (eg Sue Gilbert).  Tom thinks
    it's okay too.

Sun Oct 20 05:48:40 2002 EDT  Paul Duncan <pabs@pablotron.org>
  
  * Added Xinerama support.  Currently defaults to fullscreen on the
    first head (this can be fixed with a little work).
  * Added winwidget_{move,get_geometry}();

Wed Sep 11 19:53:31 BST 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * REALLY release 1.2.1

Wed Sep 11 19:52:24 BST 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * autoconf fixes
  * throw out the damn non-free "public domain" fonts.
  * stick in yudit.ttf. it's not as pretty, but it is, apparently, DFSG
    compliant etc.

Wed Sep 11 19:44:25 BST 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * Release 1.2.1

Wed Sep 11 19:43:24 BST 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * Patch from Panagiotis Issaris <takis.issaris@skynet.be>