@@ -261,6 +261,11 @@ Use FILE as the style descriptor for menu text.
 .B --menu-bg BG
 Use BG for the background image in menus.
 .TP 5
+.B --menu-border INT
+Specify number of pixels that define the menu
+background's border. Borders are not stretched
+when images are scaled.
+.TP 5
 .B -N, --no-menus
 Don't load or show any menus.
 .TP 5
