@@ -1,3 +1,9 @@
+Wed Dec 04 21:30:29 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>
+
+  * Found a couple of case statements without breaks in options.c
+  * New default menu, tweaked the menus a little, added code to specify the
+    menu bg image border and let the user tweak it.
+
 Sun Nov 24 22:47:43 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>
 
   * Patch from Daniel Ashbrook <anjiro@cc.gatech.edu> to bind a key (v) to
